Add records to datastore implemented in API. Store From Data splits data into multiple requests. Close #2

--- a/elycite/js/templates/erroralert.handlebars
+++ b/elycite/js/templates/erroralert.handlebars
@@ -26,3 +26,19 @@
   <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
   <p><strong>Server error.</strong> Unable to add concept.</p>
 </div>
+<div class="alert alert-warning fade in" id="emptyOntologyList" style="display: none">
+  <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  <p><strong>There are no ontologies to load.</strong> Create one first using Ontology->New.</p>
+</div>
+<div class="alert alert-warning fade in" id="emptyStoreList" style="display: none">
+  <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  <p><strong>There are no data stores to load.</strong> Load data into QMiner or Elycite using Data->Store From Dataset.</p>
+</div>
+<div class="alert alert-success fade in" id="uploadComplete" style="display: none">
+  <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  <p><strong>Uploading data completed successfully.</strong>You can now leave this page and use the data .</p>
+</div>
+<div class="alert alert-danger fade in" id="uploadFailed" style="display: none">
+  <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  <p><strong>Uploading data failed.</strong>Not all records will be available.</p>
+</div>
