--- a/elycite/js/templates/storefromdata.handlebars
+++ b/elycite/js/templates/storefromdata.handlebars
@@ -29,5 +29,5 @@
 <button class="btn btn-primary pull-right" id="storeCreate" data-loading-text="Creating...">Create</button>
 </div>
 <div>
-  Note: Using the QMiner <em>qm</em> utility to load data is more effecient.
+  <strong>Note: Using the QMiner <em>qm</em> utility to load data is recommend for large datasets and always more effiecient.</strong>
 </div>
