--- a/elycite/js/templates/suggestmodal.handlebars
+++ b/elycite/js/templates/suggestmodal.handlebars
@@ -4,18 +4,73 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="modal-suggest-label">Suggest Sub Concepts for {{name}}</h4>
+        <h4 class="modal-title" id="modal-suggest-label">Suggest Sub Concepts for {{concept.name}}</h4>
       </div>
       <div class="modal-body" id="modal-suggest-main">
+        <!-- form -->
         <form class="form-horizontal" role="form">
+
           <div class="form-group">
             <label  class="col-sm-5 control-label" style="text-align:left;" for="input-number-suggestions">Number of sub concepts</label>
             <div class="col-sm-2">
               <input type="number" class="form-control" id="input-number-suggestions" value="2">
             </div>
+
+            <!-- Field -->
+           <select class="selectpicker" data-width="100px" data-style="btn-info" title="Field" id="fieldPicker">
+              {{#each textFields}}
+              <option>{{this}}</option>
+              {{/each}}
+            </select>
+
+            <!-- suggest button -->
             <button type="button" id='suggest' class="btn btn-primary" data-loading-text="Getting suggestions...">Suggest</button>
           </div>
+          <!-- /form group -->
         </form>
+        <!-- advance options accordion -->
+        <div class="panel-group" id="accordion" style="margin-top:5px;">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapse{{this.storeId}}">
+                  Advanced options
+                </a>
+              </h4>
+            </div> <!-- /panel heading -->
+            <div id="collapse{{this.storeId}}" class="panel-collapse collapse">
+              <div class="panel-body">
+                <div class="row">
+                  <div class="input-group">
+                    <div class="form-group">
+                      <label for="cls-stemmerPicker">Stemmer: </label>
+                      <select class="selectpicker" id="cls-stemmerPicker">
+                        {{#each langopts.stemmer}}
+                        <option>{{this}}</option>
+                        {{/each}}
+                      </select>
+                    </div>
+                    <div class="form-group">
+                      <label for="cls-stopwordsPicker">Stopword list: </label>
+                      <select class="selectpicker" id="cls-stopwordsPicker">
+                        {{#each langopts.stopwords}}
+                        <option>{{this}}</option>
+                        {{/each}}
+                      </select>
+                    </div>
+                    <form class="form-inline" role="form">
+                      <div class="form-group">
+                        <div class="input-group">
+                          <span class="input-group-addon">Max. Iterations</span>
+                          <input type="number" class="form-control" id="numIter" value="50">
+                        </div>
+                      </div>
+                    </form>
+                  </div>  <!-- input group -->
+                </div> <!-- /row -->
+              </div> <!--/panel body -->
+            </div> <!-- /collapse --> 
+          </div> <!-- /panel (accordion) item -->
         <table id="suggestions-table" class="table table-bordered table-responsive" style="margin-top:5px">
         </table>
       </div>
