Several big changes: closes #40 closes #27 closes #22 closes #8 closes #6 and other improvements.

--- a/elycite/js/templates/erroralert.handlebars
+++ b/elycite/js/templates/erroralert.handlebars
@@ -16,7 +16,7 @@
 </div>
 <div class="alert alert-success fade in" id="createdAlert" style="display: none">
   <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-  <p><strong>Store created!</strong> You can now use this store.</p>
+  <p><strong>Store created!</strong> Loading data...</p>
 </div>
 <div class="alert alert-danger fade in" id="csvAlert" style="display: none">
   <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
@@ -41,4 +41,12 @@
 <div class="alert alert-danger fade in" id="uploadFailed" style="display: none">
   <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
   <p><strong>Uploading data failed.</strong>Not all records will be available.</p>
+</div>
+<div class="alert alert-success fade in" id="exportFileCreated" style="display: none">
+  <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  <p><strong>Export file created.</strong>The file is not available on the elyciteapi sandbox.</p>
+</div>
+<div class="alert alert-danger fade in" id="exportFileFailed" style="display: none">
+  <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  <p><strong>Export file creation failed.</strong></p>
 </div>
