--- a/elycite/js/templates/suggesttable.handlebars
+++ b/elycite/js/templates/suggesttable.handlebars
@@ -3,7 +3,7 @@
     <th>Name</th>
     <th>Keywords</th>
     <th>Docs</th>
-    <th></th>
+    <th><button class="btn btn-success" id="add-suggested-all" data-loading-text="Adding...">Add</button></th>
   </tr>
 </thead>
 {{#each suggestions}}
