--- a/elycite/css/ontogen.css
+++ b/elycite/css/ontogen.css
@@ -8,11 +8,14 @@
 /* Reduce bootstrap's insanely wasteful default padding/margins */
 body {
   padding: 5px;
+  font-family:"Lucida Console", Monaco, "Ubuntu Mono", monospace;
+
 }
 .container {
   max-width: none;
 }
-
+.mainView {
+}
 .panel-footer {
   padding-left: 5px;
 }
@@ -45,13 +48,28 @@ body {
   margin-right: 5px;
 }
 
-/* forms should feel whatever space is allocated to them */
+/* forms should fill whatever space is allocated to them */
 .form-inline .form-control {
   width: 100%;
 }
+/* fix for using bootstrap select inside accordions
+.bootstrap-select .dropdown-menu {
+    position:relative;
+} */
 
-/* GRAPH */
+
+/* GRAPH/Visualization */
+#ontoviz {
+  overflow:auto;
+  position:absolute;
+  left: 0;
+  right: 0;
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
+}
 svg {
+  font-family:"Lucida Console", Monaco, monospace;
   background-color: #FFF;
   cursor: default;
   -webkit-user-select: none;
