--- a/elycite/js/templates/suggestmodal.handlebars
+++ b/elycite/js/templates/suggestmodal.handlebars
@@ -29,7 +29,7 @@
           <!-- /form group -->
         </form>
         <!-- advance options accordion -->
-        <div class="panel-group" id="accordion" style="margin-top:5px;">
+        <div class="panel-group" id="accordion" style="margin-top:5px; margin-bottom:10px">
           <div class="panel panel-default">
             <div class="panel-heading">
               <h4 class="panel-title">
@@ -43,16 +43,14 @@
                 <div class="row">
                   <div class="input-group">
                     <div class="form-group">
-                      <label for="cls-stemmerPicker">Stemmer: </label>
-                      <select class="selectpicker" id="cls-stemmerPicker">
+                      <select class="form-control" id="cls-stemmerPicker" title="Stemmer">
+                        <option selected disabled>Stemmer</option>
                         {{#each langopts.stemmer}}
                         <option>{{this}}</option>
                         {{/each}}
                       </select>
-                    </div>
-                    <div class="form-group">
-                      <label for="cls-stopwordsPicker">Stopword list: </label>
-                      <select class="selectpicker" id="cls-stopwordsPicker">
+                      <select class="form-control" id="cls-stopwordsPicker" title="Stopwords">
+                        <option selected disabled>Stopwords</option>
                         {{#each langopts.stopwords}}
                         <option>{{this}}</option>
                         {{/each}}
@@ -66,12 +64,20 @@
                         </div>
                       </div>
                     </form>
+                    <form class="form-inline" role="form">
+                      <div class="form-group">
+                        <div class="input-group">
+                          <span class="input-group-addon">Num. Keywords&nbsp;&nbsp;</span>
+                          <input type="number" class="form-control" id="numKey" value="10">
+                        </div>
+                      </div>
+                    </form>
                   </div>  <!-- input group -->
                 </div> <!-- /row -->
               </div> <!--/panel body -->
             </div> <!-- /collapse --> 
           </div> <!-- /panel (accordion) item -->
-        <table id="suggestions-table" class="table table-bordered table-responsive" style="margin-top:5px">
+          <table id="suggestions-table" class="table table-bordered table-responsive" >
         </table>
       </div>
       <div class="modal-footer">
