--- a/elycite/js/templates/docsmodal.handlebars
+++ b/elycite/js/templates/docsmodal.handlebars
@@ -3,8 +3,20 @@
   <div class="modal-dialog docmodal">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>		
         <h4 class="modal-title">Documents for {{concept.name}}</h4>
+		
+		{{! This comment will not be in the output 
+			<form class="navbar-form navbar-left" role="search">
+				<div class="form-group">
+					<input type="text" class="form-control" placeholder="Search">
+				</div>
+				<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+			</form>	
+		}}
+			<input type="text" id="search-field" size="35" class="form-control" placeholder="Search">			
+			<button id="search-word" type="button" class="btn btn-default" ><span class="glyphicon glyphicon-search"></span></button>
+			
       </div> <!-- /modal header -->
       <div class="modal-body">
         <div class="row">
