--- a/elycite/js/templates/erroralert.handlebars
+++ b/elycite/js/templates/erroralert.handlebars
@@ -6,6 +6,10 @@
   <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
   <p><strong>Server error.</strong> Unable to create.</p>
 </div>
+<div class="alert alert-danger fade in" id="urlAlert" style="display: none">
+  <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  <p><strong>URL error.</strong> Unable to load dataset (faulty URL).</p>
+</div>
 <div class="alert alert-warning fade in" id="loadAlert" style="display: none">
   <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
   <p><strong>Server error.</strong> Unable to load ontology (probably exists).</p>
