--- a/elycite/js/templates/storefromdata.handlebars
+++ b/elycite/js/templates/storefromdata.handlebars
@@ -23,11 +23,19 @@
       <input type="file" id="files" name="files[]" multiple />
     </div>
   </div>
+  
+  <div class="form-group">
+    <label class="col-sm-4  control-label" for="filesURL">Or enter an URL</label>
+    <div class="col-sm-8">
+	  <input type="text" id="filesUrl" class="form-control" placeholder="URL">	
+    </div>
+  </div>    
+
 </form>
 <output id="list"></output>
 <div class="col-sm-offset-4 col-sm-8">
 <button class="btn btn-primary pull-right" id="storeCreate" data-loading-text="Creating...">Create</button>
 </div>
 <div>
-  <strong>Note: Using the QMiner <em>qm</em> utility to load data is recommend for large datasets and always more effiecient.</strong>
+  <strong>Note: Using the QMiner <em>qm</em> utility to load data is recommended for large datasets and is always more efficient.</strong>
 </div>
