default datasets closes #29 closes #28 closes #44 closes #16

--- a/elycite/js/templates/erroralert.handlebars
+++ b/elycite/js/templates/erroralert.handlebars
@@ -10,6 +10,10 @@
   <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
   <p><strong>URL error.</strong> Unable to load dataset (faulty URL).</p>
 </div>
+<div class="alert alert-danger fade in" id="datasetAlert" style="display: none">
+  <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  <p><strong>No dataset selected.</strong> You must choose from the default datasets.</p>
+</div>
 <div class="alert alert-warning fade in" id="loadAlert" style="display: none">
   <button id="modalClose" type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
   <p><strong>Server error.</strong> Unable to load ontology (probably exists).</p>
